增加用户注册功能
